--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -1,10 +1,71 @@
 .todo__form {
-  display: flex;
-  justify-content: center;
-  flex-wrap: nowrap;
+  background: white;
+  text-align: center;
+  margin: 18px auto;
+  border-radius: 10px;
+  padding-bottom: 32px;
 }
 
-/* .todo__button-group {
+.todo__form-input {
+  font-size: 16px;
+  padding: 5px;
+  transition: box-shadow 0.15s;
+  outline: none;
+  border: 1px solid #92d2ff;
+  border-radius: 3px;
+  color: #333;
+  vertical-align: middle;
+}
+
+.todo__form-input:focus {
+  box-shadow: 0 0 0.5rem 0.1rem rgba(165, 213, 255, 0.73);
+}
+
+.todo__form-input::placeholder {
+  color: #e2e2e2;
+}
+.todo__form-button-group {
   display: flex;
-  justify-content: space-between;
-} */
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.todo__form-button {
+  margin: 3px;
+  background: none;
+  border: 1px solid #92d2ff;
+  border-radius: 5%;
+  cursor: pointer;
+  opacity: 90%;
+}
+.todo__form-button:hover {
+  opacity: 1;
+  transform: scale(1.1);
+  box-shadow: 0 0 0.3rem 0.1rem rgba(165, 213, 255, 0.73);
+}
+.todo__form-button:active {
+  opacity: 1;
+  transform: scale(0.9);
+}
+
+.todo__form-button-add {
+  margin-left: 10px;
+  background: none;
+  border: none;
+  font-size: 35px;
+  cursor: pointer;
+  outline: none;
+  vertical-align: middle;
+  color: #26b2ff;
+  opacity: 0.8;
+  transition: opacity 0.15s, transform 0.15s;
+}
+
+.todo__form-button-add:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+.todo__form-button-add:active {
+  opacity: 1;
+  transform: scale(1.1);
+}
