update/ styling and functionality

--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,9 +1,9 @@
-.todo__list {
-  width: auto;
+/* .todo__list {
+  width: 100%;
   height: auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   margin: 100px auto;
-}
+} */
