--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -1,9 +1,16 @@
 .todo__form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background: white;
   text-align: center;
+  width: 520px;
   margin: 18px auto;
   border-radius: 10px;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
+}
+.todo__form-label {
+  text-align: left;
 }
 
 .todo__form-input {
@@ -15,6 +22,7 @@
   border-radius: 3px;
   color: #333;
   vertical-align: middle;
+  margin-bottom: 10px;
 }
 
 .todo__form-input:focus {
@@ -24,35 +32,22 @@
 .todo__form-input::placeholder {
   color: #e2e2e2;
 }
-.todo__form-button-group {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 10px;
-}
 
-.todo__form-button {
-  margin: 3px;
-  background: none;
-  border: 1px solid #92d2ff;
-  border-radius: 5%;
-  cursor: pointer;
-  opacity: 90%;
-}
-.todo__form-button:hover {
-  opacity: 1;
-  transform: scale(1.1);
-  box-shadow: 0 0 0.3rem 0.1rem rgba(165, 213, 255, 0.73);
-}
-.todo__form-button:active {
-  opacity: 1;
-  transform: scale(0.9);
+.todo__form-edit-input {
+  margin: 4px auto;
+  color: #000;
+  background: radial-gradient(rgb(255, 255, 255) 0%, rgb(64, 140, 221) 100%);
+  border: 1px solid rgb(178, 151, 151);
+  padding: 16px;
+  border-radius: 5px;
+  width: 40%;
 }
 
 .todo__form-button-add {
-  margin-left: 10px;
+  margin-top: 10px;
   background: none;
-  border: none;
-  font-size: 35px;
+  border: 1px solid #26b2ff;
+  font-size: 25px;
   cursor: pointer;
   outline: none;
   vertical-align: middle;
@@ -63,9 +58,34 @@
 
 .todo__form-button-add:hover {
   opacity: 1;
-  transform: scale(1.3);
+  color: #fff;
+  background-color: #26b2ff;
+  transform: scale(1.2);
 }
 .todo__form-button-add:active {
   opacity: 1;
   transform: scale(1.1);
+}
+
+.todo__form-button-edit {
+  position: absolute;
+  background: none;
+  padding: 10px 14px;
+  border-radius: 8px;
+  border: 1px solid #26b2ff;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  right: 470px;
+  color: #26b2ff;
+  opacity: 0.8;
+  transition: opacity 0.15s, transform 0.15s;
+}
+
+.todo__form-button-edit:hover {
+  opacity: 1;
+  color: #fff;
+  background-color: rgb(114, 172, 235);
+  transform: scale(1.2);
 }
