--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -2,33 +2,40 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 4px auto;
+  margin: 8px auto;
   color: #000;
   background: radial-gradient(rgb(255, 255, 255) 0%, rgb(64, 140, 221) 100%);
   border: 1px solid rgb(178, 151, 151);
   padding: 16px;
   border-radius: 5px;
-  width: 40%;
+  width: 80%;
+  text-overflow: clip;
 }
 .todo__item-complete {
   text-decoration: line-through;
   opacity: 0.4;
 }
 
+.todo__item-task {
+  cursor: pointer;
+  overflow: hidden;
+}
+
 .todo__item-icons {
   display: flex;
   align-items: center;
   font-size: 24px;
-  cursor: pointer;
   gap: 10px;
 }
 .todo__item-delete-btn {
   margin-right: 5px;
   color: #000;
   opacity: 80%;
+  cursor: pointer;
 }
 
 .todo__item-edit-btn {
   color: #000;
+  cursor: pointer;
   opacity: 80%;
 }
